Fixed the housekeeping bugs of roomStatus getting changes from CLEAN to DIRTY after one cycle is completed as per businessDate